# NamedPipe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  checks.yml
cmake/: setup_dependencies.cmake
examples/: CMakeLists.txt  Reader.cpp  Writer.cpp
include/npipe/: Exception.hpp  InterruptException.hpp  NamedPipe.hpp  PipeException.hpp  TimeoutException.hpp
src/: CMakeLists.txt  NamedPipe.cpp
tests/: CMakeLists.txt  IO.cpp  Meta.cpp
